# RAGEval

./: .gitignore  README.md
rag-evaluation-backend/: AGENTS.md  README.md  alembic.ini  pyproject.toml  requirements.txt
rag-evaluation-backend/alembic/: README  env.py
rag-evaluation-backend/alembic/versions/: 20260121_000000_0001_initial_schema.py  20260123_000000_0002_add_model_config_tables.py  20260126_000000_0003_schema_fixes.py  20260127_000000_0004_add_query_indexes.py  20260127_000001_0005_remove_api_keys_table.py  20260127_000002_0006_remove_api_key_audits_table.py
rag-evaluation-backend/app/: __init__.py
rag-evaluation-backend/app/api/: deps.py
rag-evaluation-backend/app/core/: config.py
rag-evaluation-backend/app/crud/: __init__.py  accuracy.py  admin.py  dataset.py  model_config.py  performance.py  project.py  question.py  rag.py  user.py  user_model_config.py
rag-evaluation-backend/app/db/: init_db.py
rag-evaluation-backend/app/models/: __init__.py  accuracy.py  api_key.py  api_key_audit.py  dataset.py  model_config.py  performance.py  question.py  rag_answer.py  user.py  user_model_config.py
rag-evaluation-backend/app/schemas/: dataset.py  model_config.py  performance.py  project.py  question.py  user.py  user_model_config.py
rag-evaluation-backend/app/services/: accuracy_evaluator.py  accuracy_service.py  admin_service.py  dataset_service.py  model_config_service.py  performance_service.py  rag_service.py  (+4 more)
rag-evaluation-backend/doc/: database_design.md  产品需求文档.md  功能设计文档.md
rag-evaluation-backend/tests/: test_crud_layer_endpoints.py
(+25 files in other folders)
